--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>The Basic Language of the Web: HTML</title>
+    <title>Learning HTML</title>
     <link href="style1.css" rel="stylesheet" />
   </head>
 
@@ -17,7 +17,7 @@
     -->
 
     <header class="main-header">
-      <h1>📘 The Code Magazine</h1>
+      <h1>📘 The Shawn Magazine</h1>
 
       <nav>
         <a href="blog.html">Blog</a>
